
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* auth_shifts ;
 scalar_t__ malloc (scalar_t__) ;
 int memset (char*,char,scalar_t__) ;
 scalar_t__ strlen (char*) ;

char *scramble(char * str)
{
int i;
    char * s;

    s = (char *) malloc (strlen (str) + 3);
    memset(s, '\0', strlen(str) + 3);
    *s = 'A';
    for (i = 1; str[i - 1]; i++)
        s[i] = auth_shifts[(unsigned char)(str[i - 1])];
    return (s);
}
